--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,6 @@ header {
 }
 
 .bx-wrapper {
-  height: 25vh;
   padding: 5px;
 }
 
@@ -106,7 +105,7 @@ header {
 
 .course li {
   width: 33%;
-  height: 8vh;
+  height: 60px;
   border-bottom: 1px solid #ccc;
   border-right: 1px solid #ccc;
   display: table;
