--- a/css/styles.css
+++ b/css/styles.css
@@ -34,14 +34,14 @@ ul {
   width: 90%;
   max-width: 1200px;
   margin: auto;
+  padding: 5px 0 0;
 }
 
 /* Header */
 header {
   width: 100%;
-  height: 92vh;
+  height: 100vh;
   position: relative;
-  top: 8vh;
 }
 
 header .bg-video {
@@ -110,7 +110,6 @@ nav a.search {
 
 nav .logo {
   width: 200px;
-  margin-right: 35px;
 }
 
 .toggle-menu {
@@ -308,7 +307,7 @@ footer .copyright li {
 
 @media (max-width: 786px) {
   header {
-    height: 67vh;
+    height: 75vh;
   }
 
   .main-menu {
@@ -337,11 +336,7 @@ footer .copyright li {
 
 @media (max-width: 500px) {
   header {
-    height: 42vh;
-  }
-
-  section.portfolio h3 {
-    text-align: center;
+    height: 50vh;
   }
 
   section.portfolio {
